# pustakalaya

./: README.md  fix_metadata.py  mise.toml  pustakalaya-web.path  pustakalaya-web.service  pyproject.toml
pustakalaya/: db.py  scanner.py  watcher.py
pustakalaya/.claude/: settings.local.json
pustakalaya/static/: style.css
pustakalaya/templates/: base.html  book.html  collections.html  index.html  roots.html
pustakalaya/tui/: app.py
pustakalaya/tui/screens/: collections.py  main.py  metadata.py  roots.py
pustakalaya/web/: app.py  auth.py  routes.py
tests/: conftest.py  test_db.py  test_scanner.py  test_tui.py  test_web.py
